TEST_PROGRAMS/INVALID/daniel_pham/i4.min
# Declarations after statements
var x: int;

print x;

var y: int;

